--- a/src/player-manager/tableau/_playerTableaux.scss
+++ b/src/player-manager/tableau/_playerTableaux.scss
@@ -60,7 +60,10 @@
 }
 
 .pr_player_tableau_cards_container[data-overlap="enabled"] {
-  overflow-y: auto;
+  overflow-x: auto;
+  overflow-y: hidden;
+  padding-bottom: 16px;
+  padding-top: 8px;
 }
 
 .pr_player_board_tableau_cards {
@@ -81,24 +84,26 @@
 }
 
 .pr_player_board_tableau_cards[data-region="east"][data-overlap="enabled"]
-  .card:nth-child(n + 2) {
+  > .card:nth-child(n + 2) {
   margin-left: calc(var(--paxRenCardScale) * -110px);
 }
 
-.pr_player_board_tableau_cards[data-region="east"][data-overlap="enabled"][data-overlap-empire-squares="disabled"] {
-  .pr_empire_square:not(:last-child) {
-    margin-right: calc(var(--paxRenCardScale) * 110px);
-  }
+.pr_player_board_tableau_cards[data-region="east"][data-overlap="enabled"][data-overlap-empire-squares="disabled"]
+  > .pr_empire_square:not(:last-child) {
+  // .pr_empire_square:not(:last-child) {
+  margin-right: calc(var(--paxRenCardScale) * 110px);
+  // }
 }
 
-.pr_player_board_tableau_cards[data-region="west"][data-overlap="enabled"][data-overlap-empire-squares="disabled"] {
-  .pr_empire_square:not(:last-child) {
-    margin-left: calc(var(--paxRenCardScale) * 110px);
-  }
+.pr_player_board_tableau_cards[data-region="west"][data-overlap="enabled"][data-overlap-empire-squares="disabled"]
+  > .pr_empire_square:not(:last-child) {
+  // .pr_empire_square:not(:last-child) {
+  margin-left: calc(var(--paxRenCardScale) * 110px);
+  // }
 }
 
 .pr_player_board_tableau_cards[data-region="west"][data-overlap="enabled"]
-  .card:nth-child(n + 2) {
+  > .card:nth-child(n + 2) {
   margin-right: calc(var(--paxRenCardScale) * -110px);
 }
 
